# json-compiler

./: Cargo.toml  README.md  ПОЯСНИТЕЛЬНАЯ ЗАПИСКА.docx
src/: diagram.json  lang_json_stuf.rs  lang_vec_stuf.rs  main.rs  main.rs~  mk_json_blocks.rs  test.rs
test/: dsjghyugfffffffffffffffios.json  gg  lab1.c  lab1.json  lab5-rs  lab9-rs  lab9-rs-new.rs  main.rs  mk_json_blocks.rs  new_new_test.c  new_test.c  ou  out  simple.c  test.asm  test.c  test.js  test.json  test.rs  test1.json  test_code.java  пример.xml
test/outfiles/: example.json  example_if_else.json  lab1.json  lab5-rs.json  lab9-rs-new.json  lab9-rs.json  main.json  new_new_test.json  simple.json  test.json  еще 1 нормальный пример.json
